updates deploy to heroku

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="display">
-        <h1 class="mainTitle">Recepción activa</h1>
+        <h1 class="mainTitle">Angular Salesforce Contacts</h1>
     </div>
     <div class="display">
         <h3 *ngIf='loggedUser'>Login User: {{loggedUser}}</h3>
